UseCases/share/.kyverno-test/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-a
  labels:
    kubernetes.io/metadata.name: team-a
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: kueue-shared-queue-request
  namespace: team-a
  labels:
    kueue.x-k8s.io/shared-queue-request: "true"
data: {}
